# analytics-engineering-fp

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  HANDOFF.md  README.md  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt  spain_cities.csv
.claude/: settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml
Project_Instructions/open_meteo_group_project/: TEAM_PLAYBOOK.md
Project_Instructions/open_meteo_group_project/data/raw/open_meteo/: raw_air_quality_hourly.csv  raw_forecast_daily.csv  raw_locations.csv  raw_weather_daily.csv
Project_Instructions/open_meteo_group_project/scripts/: extract_open_meteo.py
analytics_engineering_fp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: weather_analytics.duckdb
data/raw/open_meteo/: raw_air_quality_hourly.csv  raw_forecast_daily.csv  raw_locations.csv  raw_weather_daily.csv
docs/: modeling_decisions.md
macros/: season_from_date.sql
models/: exposures.yml  sources.yml  unit_tests.yml
models/marts/: dim_location.sql  fct_air_quality_city_day.sql  fct_city_weather_day.sql  fct_forecast_city_day.sql  mart_city_month_summary.sql  mart_city_season_summary.sql  mart_city_weather_summary.sql  mart_extreme_events.sql  mart_temperature_anomaly.sql
models/marts/docs/: marts.yml  marts_analytics.yml  marts_seasonal_extremes.yml
models/staging/: stg_air_quality_hourly.sql  stg_forecast_daily.sql  stg_locations.sql  stg_weather_daily.sql
models/staging/docs/: stg_docs.yml
scripts/: extract_open_meteo.py  extract_spain_cities.py  load_to_duckdb.py  render_lineage_dag.py  run_pipeline.sh
seeds/: _seeds.yml  aqi_health_bands.csv
streamlit_app/: app.py
streamlit_app/variants/: observatory.py
tests/: assert_aqi_non_negative.sql  assert_temperature_within_realistic_range.sql
tests/generic/: non_negative.sql
tests_python/: test_extract.py
